<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/etiquetas"
    app:strokeColor="@color/borde"
    app:strokeWidth="1dp"
    android:layout_margin="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titulo_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/epilogue_bold"
            android:layout_margin="12dp"
            android:text="@string/txt_new_ingredient"
            android:textColor="@color/titulos"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_ingrediente_crear"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:src="@drawable/ic_camera"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_dialog" />

        <EditText
            android:id="@+id/et_new_ingredient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/hint_new_ingredient_name"
            android:background="@drawable/bg_et_my_recipe"
            android:inputType="textCapSentences"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_ingrediente_crear" />

        <EditText
            android:id="@+id/et_new_ingredient_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/bg_et_my_recipe"
            android:hint="@string/hint_new_ingredient_amount"
            android:padding="12dp"
            android:inputType="textCapSentences"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_new_ingredient_name" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/cancel_btn_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparente"
                android:fontFamily="@font/epilogue_bold"
                android:text="@string/cancel_btn"
                android:textColor="@color/titulos"
                android:textSize="14sp"
                app:strokeColor="@color/titulos"
                app:strokeWidth="2dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/save_btn_ingredient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/transparente"
                android:fontFamily="@font/epilogue_bold"
                android:text="@string/btn_delete_item"
                android:textColor="@color/titulos"
                android:textSize="14sp"
                app:strokeColor="@color/titulos"
                app:strokeWidth="2dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>