<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario"
    tools:context=".activities.RegisterActivity">

    <ImageButton
        android:id="@+id/btn_atras_register"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:background="@color/transparente"
        android:src="@drawable/ic_atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/title_register"
        android:textColor="@color/titulos"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_atras_register" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        app:hintTextColor="@color/texto"
        android:textColorHint="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        app:hintTextColor="@color/texto"
        android:textColorHint="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameRegisterLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        app:hintTextColor="@color/texto"
        android:textColorHint="@color/texto"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_eye_selector"
        app:endIconTint="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailRegisterLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordRegisterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textColor="@color/texto"
        app:hintTextColor="@color/texto"
        android:textColorHint="@color/texto"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_eye_selector"
        app:endIconTint="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordRegisterLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/epilogue_regular"
        android:text="@string/politica_privacidad"
        android:textAllCaps="false"
        android:textColor="@color/texto"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordRegisterLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/generico"
        android:fontFamily="@font/epilogue_bold"
        android:paddingVertical="12dp"
        android:text="@string/registrarse"
        android:textColor="@color/textBtn"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/already_have_account"
        android:textColor="@color/titulos"
        android:textSize="14sp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

</androidx.constraintlayout.widget.ConstraintLayout>