<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/titulos"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailSignInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:textColorHint="@color/texto"
        app:hintTextColor="@color/texto"
        app:cursorColor="@color/texto"
        app:placeholderTextColor="@color/texto"
        app:endIconDrawable="@drawable/ic_eye_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passSignInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/pass"
        android:textColorHint="@color/texto"
        app:hintTextColor="@color/texto"
        app:cursorColor="@color/texto"
        app:placeholderTextColor="@color/texto"
        app:endIconMode="password_toggle"
        app:endIconDrawable="@drawable/ic_eye_selector"
        app:endIconTint="@color/texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailSignInLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_login"
            android:textColor="@color/texto"
            android:fontFamily="@font/epilogue_regular"
            android:textSize="16sp"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/epilogue_regular"
        android:text="@string/forgot"
        android:textAllCaps="false"
        android:textColor="@color/texto"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passSignInLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signing_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="20dp"
        android:backgroundTint="@color/generico"
        android:fontFamily="@font/epilogue_bold"
        android:paddingVertical="12dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/textBtn"
        android:textSize="18sp"
        app:cornerRadius="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

    <Button
        android:id="@+id/tvCrearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/epilogue_bold"
        android:text="@string/crear_cuenta"
        android:textColor="@color/titulos"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginTop="4dp"
        android:background="@color/transparente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signing_btn" />


</androidx.constraintlayout.widget.ConstraintLayout>